# hetzner-robot-failover-keepalived

./: .gitignore  CONFIGURE_KEEPALIVED.md  README.md  config.json.sample  deb.sh  default.nix  flake.nix  module.nix  overlay.nix  pex.sh  pyproject.toml  robot_failover.py  shell.nix  test-base.nix  test-tcpdump.nix  test.nix
.github/workflows/: check.yml  deb.yml  release.yml
failover-daemon/: .gitignore  PROD.md  config.json.sample  go.mod  module.nix  package.nix
failover-daemon/cmd/failover-daemon/: basic-failover.nft  iproute.go  ips.go  main.go  routing-slow.go  routing.go
