[tool.poetry]
name = "hetzner-robot-failover-keepalived"
version = "0.0.0"
description = "This is a little script for switching the failover ips on robot dedicated servers. It's also possible to use a robot vlan."
authors = ["Maciej Krüger <mkrueger@mgit.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = "^2.32.3"
bunch = {git = "https://github.com/dsc/bunch"}


[tool.poetry.group.dev.dependencies]
pex = "^2.19.1"

#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
